# controllers/controller.go
@@ -9,6 +9,17 @@ import (
 	_ "github.com/swaggo/swag/example/celler/httputil"
 )
 
+// CriaAluno godoc
+//
+//	@Summary		Cria um aluno
+//	@Description	Routa responsavel por criar alunos
+//	@Tags			alunos
+//	@Accept			json
+//	@Produce		json
+//	@Param			aluno	body		models.Aluno	true	"Add aluno"
+//	@Success		200	{object}	models.Aluno
+//	@Failure		500	{object}	httputil.HTTPError
+//	@Router			/alunos/ [post]
 func CriaAluno(c *gin.Context) {
 	var aluno models.Aluno
 	if err := c.ShouldBindJSON(&aluno); err != nil {
@@ -35,7 +46,7 @@ func CriaAluno(c *gin.Context) {
 //	@Accept			json
 //	@Produce		json
 //	@Success		200	{object}	models.Aluno
-//	@Failure		400	{object}	httputil.HTTPError
+//	@Failure		500	{object}	httputil.HTTPError
 //	@Router			/alunos/ [get]
 func ListarAlunos(c *gin.Context) {
 	var alunos []models.Aluno
